--- a/style.css
+++ b/style.css
@@ -932,7 +932,9 @@ body.has-bg .header {
 
 /* RSS Sidebar */
 .rss-sidebar {
-  width: 450px;
+  width: 30vw;
+  min-width: 350px;
+  max-width: 600px;
   background: var(--color-surface);
   border-left: 1px solid var(--color-border);
   display: flex;
